@@ -2,6 +2,7 @@ require 'nokogiri/xml/parse_options'
 require 'nokogiri/xml/sax'
 require 'nokogiri/xml/fragment_handler'
 require 'nokogiri/xml/node'
+require 'nokogiri/xml/namespace'
 require 'nokogiri/xml/attr'
 require 'nokogiri/xml/dtd'
 require 'nokogiri/xml/cdata'
