@@ -1,0 +1,7 @@
+module Nokogiri
+  module XML
+    class Namespace
+      attr_reader :document
+    end
+  end
+end
