@@ -23,6 +23,8 @@
     push, pop, shift, ==
   * Nokogiri.XML, Nokogiri.HTML take blocks that receive
     Nokogiri::XML::ParseOptions objects
+  * Nokogiri::XML::Node#namespace returns a Nokogiri::XML::Namespace
+  * Nokogiri::XML::Node#namespace= for setting a node's namespace
   * JRuby 1.3.0 support via FFI.
 
 * Bugfixes
